--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
       "android",
       "web"
     ],
+    "entryPoint": "./src/App.js",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
